--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>
-Everything 💚✨
+ Past.Present.Future 💚✨
 </title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="icon" href="favicon.ico?v=2">
@@ -23,27 +23,28 @@ Everything 💚✨
     <div class="profile">
       <img src="images/pic.png" alt="My Picture">
       <h2>Hello.</h2>
-      <p>Striving for a moment in life where i can finally say i have my happiness 💚💻</p>
+      <p class="intro">Striving for a moment in life where i can finally say i have my happiness 💚💻</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="https://media.giphy.com/media/8SRqnPebX1H8lQy5YR/giphy.gif" alt="coding image">
+        <img class="skillimg" src="https://media.giphy.com/media/8SRqnPebX1H8lQy5YR/giphy.gif" alt="coding image">
         <h3>Coding</h3>
-        <p>I've basic understanding and knowledge of the programming languages used on today's date and i'm very passionate about it.</p>
+        <p class="description-1">I've basic understanding and knowledge of the programming languages used on today's date and i'm very passionate about it.Looking forward in making a career with this skill by making products which help bring a difference ✨</p>
       </div>
       <div class="skill-row">
-        <img class="" src="https://media.giphy.com/media/3o752nnUPE7OzLeSVW/giphy.gif" alt="Dog pc img">
-        <h3>Tech Enthusiast</h3>
-        <p>I don't know if i can count this as a skill, but i'm good at anything which relates to Tech (smartphones,computers etc)</p>
+        <img class="skillimg1" src="https://media.giphy.com/media/3o752nnUPE7OzLeSVW/giphy.gif" alt="Dog pc img">
+        <h3 class="okey">Tech Enthusiast</h3>
+        <p class="description-2">I don't know if i can count this as a skill, but i'm good at anything which relates to Tech (smartphones,computers etc)</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>I'm always free to talk coz i don't have much people to talk to.</h3>
-      <p>contact me via the links given below.</p>
+      <p>Reach out to me through these links below.</p>
+      <br>
       <a class="btn" href="mailto:praneethm181@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -53,7 +54,7 @@ Everything 💚✨
     <a class="footer-link" href="https://www.linkedin.com/in/praneeth-m-a245ab222/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/praneethm05">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/praneethm.exe/">Instagram</a>
-    <p>© Praneeth M .</p>
+    <p class="credits">© PRANEETH M</p>
   </div>
   
 
