--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skillimg" src="https://media.giphy.com/media/8SRqnPebX1H8lQy5YR/giphy.gif" alt="coding image">
+        <img class="skillimg" src="https://media.giphy.com/media/Ll22OhMLAlVDb8UQWe/giphy.gif" alt="coding image">
         <h3>Coding</h3>
-        <p class="description-1">I've basic understanding and knowledge of the programming languages used on today's date and i'm very passionate about it.Looking forward in making a career with this skill by making products which help bring a difference ✨</p>
+        <p class="description-1">I've basic understanding and knowledge of the programming languages used on today's date and i'm very passionate about learning them,Looking forward to make a career with this skill by building products which help bring a difference ✨</p>
       </div>
       <div class="skill-row">
         <img class="skillimg1" src="https://media.giphy.com/media/3o752nnUPE7OzLeSVW/giphy.gif" alt="Dog pc img">
         <h3 class="okey">Tech Enthusiast</h3>
-        <p class="description-2">I don't know if i can count this as a skill, but i'm good at anything which relates to Tech (smartphones,computers etc)</p>
+        <p class="description-2">I don't know if i can count this as a skill,but i'm really a big tech savvy person and i always try to keep up my knowledge about tech  up-to-date 📱💻. </p>
       </div>
     </div>
     <hr>
